--- a/index.html
+++ b/index.html
@@ -4,9 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Practice...</title>
+    <style>
+    /* Everything inbetween these lines is going to be CSS */
+    body{
+        background: lightsalmon;
+        font-family: Arial, Helvetica, sans-serif;
+    }
+    h1{
+        border-radius: 25px;
+        background-color: lightslategrey;
+        color: lightgreen;
+    }
+    h2{
+        color: lightblue;
+    }
+
+    
+    
+    </style>
+
 </head>
 <body>
-    hi
+    <h1>My Webpage</h1>
+    <h2>About Me</h2>
+    <p>I'm an overall awesome guy.
+        You don't have to take my word for it, though.
+        It's been <em>scientifically proven</em>> on manyt levels
+    </p>
+    <button>Click here to learn more.</button>
 </body>
 </html>
