--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
-        <h1>Home</h1>
+        <h1>Contact Us</h1>
     </header>
     <section>
         <div>a</div>
